# News2ETF-Engine

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  config.dev.toml  config.docker.toml  config.toml  devbox.json  docker-compose.yaml  justfile  lefthook.yml  main.py  pyproject.toml  tmp.json
.continue/agents/: new-config-1.yaml  new-config.yaml
agent/: __init__.py  config.py  config.toml  main.py
agent/agent/: __init__.py  client.py  nodes.py  prompts.py  state.py  workflow.py
agent/backtest/: __init__.py  engine.py  metrics.py  portfolio.py
agent/signals/: __init__.py  features.py  models.py  scorer.py  trainer.py
agent/utils/: __init__.py  industry_map.py  llm_client.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_seed_labeling_schema.py  003_seed_llm_config.py  0236277292ea_merge_labeling_seed_and_auto_heads.py  044d9ddc000a_experiment_add_task_type_drop_config_.py  134fb2cb17f4_auto.py  227f6d922401_auto.py  3e3c7b806fac_auto.py  516826fe0a55_auto.py  545def037c93_remove_task_configs_table_inline_config_.py  5f89f329833e_auto.py  6e02528cb66c_auto.py  887b48e92335_auto.py  91b3a6d74f63_drop_param_schemas_hook_column.py  93c3269b944d_auto.py  a634e30a0529_initial_schema.py  b8dc8522ae07_auto.py  b8fb1a90c669_auto.py  b9ac71c1c6a5_auto.py  e12f063e5a1b_auto.py
configs/: hierarchy.yaml  llm_credentials.yaml.example  major_keywords.yaml  sub_keywords.yaml
configs/prompts/: build_industry_system.txt  label_json_fixer_system.md  label_level1_schema.json  label_level1_system.md  label_level1_system.txt  label_level2_schema.json  label_level2_system.md  label_level2_system.txt
docs/: plan.md  todo.md  计算服务调用文档.md
finbert/: config.py  config.toml  dataset.py  main.py  model.py  predict.py  train.py  wandb_handler.py
finbert/configs/: hierarchy.yaml
finbert/src/: __init__.py  config.py  dataset.py  hierarchy.py  model.py  predict.py  train.py  wandb_handler.py
manifests/: loki-config.yaml  s3.json
manifests/clickhouse/: custom.xml
manifests/grafana/provisioning/dashboards/: dashboards.yaml
manifests/grafana/provisioning/dashboards/json/: news2etf-labeling-monitor.json  news2etf-log-explorer.json
manifests/grafana/provisioning/datasources/: datasources.yaml
scripts/: analyze_content_length.py  clear_data.sh  export_swagger.py  extract_level2.py  python_format.sh  query_sub_classified.py
src/: __init__.py  industry.py  labeling.py  store.py  tmp.json
src/api/: app.py  schemas.py
src/api/routers/: configs.py  data.py  experiments.py  industry.py  labeling.py  tasks.py
src/cli/: industry.py  labeling.py  main.py
src/common/: __init__.py  base.py  config.py  param_metadata.py  param_validator.py  registry.py  tracking.py
src/db/: __init__.py  clickhouse.py  llm_config.py  models.py  session.py  store.py
src/experiment/: __init__.py  labeling_task.py  manager.py  schema.py
src/utils/: hooks.py  id_gen.py  llm_client.py  loki_sink.py  progress_manager.py  redis_progress.py  s3_client.py  wandb_handler.py
