[project]
name = "News2ETF-Engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.15.0",
    "apsw==3.51.3.0",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "fastexcel>=0.12.0",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "typer>=0.24.1",
    "wandb>=0.25.0",
    "openai>=2.29.0",
    "sniffio>=1.3.1",
    "duckdb>=1.5.0",
    "jsonschema>=4.23.0",
    "loguru>=0.7.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "boto3>=1.35.0",
    "transformers>=4.40.0",
]


[dependency-groups]
platform = []
dev = ["ruff>=0.15.5", "uv>=0.10.12"]
torch_cpu = ["torch==2.1.0+cpu", "torchvision==0.16.0+cpu"]
torch_gpu = ["torch==2.1.0", "torchvision==0.16.0"]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
conflicts = [[{ group = "torch_cpu" }, { group = "torch_gpu" }]]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", group = "torch_cpu" },
    { index = "pytorch-gpu", group = "torch_gpu" },
]
torchvision = [
    { index = "pytorch-cpu", group = "torch_cpu" },
    { index = "pytorch-gpu", group = "torch_gpu" },
]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # https://docs.astral.sh/ruff/rules/#error-e
    "F",  # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",  # https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
ignore = ["F401"]

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".cache",
    ".idea",
    ".vscode",
    ".venv",
    ".devbox",
    "db/",
    "data/",
    "temp/",
    "logs/",
    "vendor/",
    "output/",
    "**/node_modules",
    "**/.*",
    "alembic/versions/*_auto.py",
]
